--- a/src/components/Testimonials/Testimonial.css
+++ b/src/components/Testimonials/Testimonial.css
@@ -1,13 +1,13 @@
 .t-wrapper{
     padding:  0 3rem 0 3rem;;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 5rem;
     flex-direction: column;
     /* gap: 2rem; */
-    position: relative;
+    position: relative;   
 }
 .t-heading{
     align-self: start;
@@ -22,22 +22,23 @@
 
 .t-blur1{
     left: 38rem;
-    top: 5rem;
-    width: 13rem;
+    top: 7rem;
+    width: 15rem;
+    height: 16rem;
 }
 .t-blur2{
-    top: 5rem;
+    top: 7rem;
     left: 15rem;
-    width: 5rem;
+    width: 7rem;
 }
 .testimonial{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 2rem;
+    padding: 4rem 2rem 1.5rem 2rem ;
     width: 30rem;
-    height: 16rem;
+    height: 17rem;
     /* styles same as work.css */
     background: rgba(255, 255, 255, 0.26);
     border: 7px solid var(--blueCard);
@@ -76,6 +77,5 @@
     .testimonial>img{
         width: 200px;
         height: 150px;
-        color:aliceblue
     }
   }
