--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,5 +1,5 @@
 .contact-form{
-    /* padding: 0 0rem 0 0; */
+    padding: 0 3rem 0 3rem;
     display: flex;
     height: 80vh;
     margin-top: 4rem;
